fix footer spacing

--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -39,7 +39,7 @@
 .fa {
     padding: 20px;
     font-size: 30px;
-    width: 50px;
+    width: 80px;
     text-align: center;
     text-decoration: none;
 }
